# project-jay

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  EditorBindings.md  Ideas.md  Notes.txt  Subtract.md  Todo.md  Todo.txt  bash.exe.stackdump  buildandrun.bat  buildandrun.py  compile_commands.json  compile_flags.txt  compileblobs.py  compilelandmaps.py  compilemodels.py  compileshaders.py  copyassets.py  dxshadercomp.py  generateentitytypes.py  generateshaderheaders.py  generatetools.py  lastcompiletimes.json  makecomponentsheet.py  phaseconverter.py
Assets/: player.json  sk_test.jmd  sk_test.jsk  st_sphere.jmd  test_entity.json  test_projectile.json  test_spawner.json
Assets/blobs/: lv_t.xcf
Assets/emitters/: p_cloud.json  p_dust.json  p_spark.json  p_sparkle.json  p_test.json
Assets/entities/: e_boulder.json  e_boulder_bro.json  e_comet.json  e_comet_spawner.json  e_enemy.json  e_player.json  e_rabbit_pole.json  e_rock.json  e_spinrat.json  e_target_test.json  e_test_skel.json  e_tpillar.json  e_tree.json  player.json  rock.json  target_test.json  test_entity.json  test_projectile.json  test_spawner.json  tree.json
Assets/heightmaps/: test_level.txt
Assets/landmaps/: lm_bridge.xcf  lm_bridge_donut.xcf  lm_chase.xcf  lm_comet.xcf  lm_dawn.xcf  lm_dawn2.xcf  lm_default.xcf  lm_first.xcf  lm_hop.xcf  lm_hop2.xcf  lm_jump.xcf  lm_jumper.xcf  lm_long.xcf  lm_moi.xcf  lm_moi_reverse.xcf  lm_split.xcf  lm_start.xcf  lm_start2.xcf  lm_startag.xcf  lm_tele.xcf  lm_weedline.xcf  lm_weeds.xcf
Assets/levels/: load_globals.json  lv_blah.json  lv_boulder_bros.json  lv_boulder_bros_b.json  lv_boulder_center.json  lv_boulder_m.json  lv_bridge.json  lv_bridge_donut.json  lv_bridge_high2.json  lv_bridge_multi.json  lv_bridge_nj.json  lv_bridge_nob.json  lv_bridge_nob_brok.json  lv_bridge_noneg.json  lv_bridge_ppad.json  lv_bridge_st.json  lv_comet.json  lv_dawn.json  lv_dawn2.json  lv_dawn2_crazy.json  lv_dawn2_nocom.json  lv_first.json  lv_hop.json  lv_hop2.json  lv_intro.json  lv_jump.json  lv_jumper.json  lv_moi.json  lv_moi_flat.json  lv_moi_flat_nobell.json  lv_moi_reverse.json  lv_newmoi.json  lv_pillar_field.json  lv_rabbit.json  lv_rabbit_hella.json  lv_rabbit_no.json  lv_rabbit_noc.json  lv_shooters.json  lv_shooters_bros.json  lv_shooters_bros_1.json  (+35 more)
Assets/mappings/: gamecontrollerdb.txt
Assets/materials/: m_bar.json  m_boulder.json  m_boulder_bro.json  m_comet.json  m_default.json  m_dust.json  m_flower.json  m_flower_test.json  m_hair.json  m_leaves.json  m_player.json  m_playershirt.json  m_playerskin.json  m_postprocess.json  m_preuiblit.json  m_rabbit_pole.json  m_rock.json  m_screenblit.json  m_seed.json  m_seed_test.json  m_sparkle.json  m_spinrat_back.json  m_spinrat_body.json  m_spinrat_ears_b.json  m_spinrat_ears_f.json  m_spinrat_eyes.json  m_spinrat_nose.json  m_spinrat_swirl.json  m_stem.json  m_terrain.json  m_test_skel.json  m_testparticle.json  m_text.json  m_tpillar.json  m_tree.json  m_uibar.json  m_willowleaves.json  m_world.json
Assets/models/: sk_char.glb  sk_char.gltf  sk_spinrat.glb  sk_test_skel.gltf  st_boulder.glb  st_boulder_bro.glb  st_char.gltf  st_char.jmd  st_comet.glb  st_default.glb  st_flower.glb  st_flower.gltf  st_flower.jmd  st_rabbit_pole.glb  st_rock.glb  st_rock.gltf  st_rock.jmd  st_sphere.glb  st_sphere.gltf  st_terraincursor.glb  st_tpillar.glb  st_tree.glb  st_tree.gltf  st_tree.jmd
Assets/old/: sk_test_anim_TestAction.jan  st_capsule.jmd
Assets/textures/: font.dds  rock_c.dds  t_bricks_c.dds  t_bricks_n.dds  t_bumprat_ears_f_m.dds  t_crack_m.dds  t_flower_m.dds  t_font.dds  t_granite_c.dds  t_granite_n.dds  t_grass_c.dds  t_grass_n.dds  t_hair_m.dds  t_leaves_m.dds  t_marble_c.dds  t_rock_n.dds  t_spinrat_back_m.dds  t_spinrat_ears_b_m.dds  t_spinrat_eyes_m.dds  t_spinrat_nose_m.dds  t_spinrat_swirl_m.dds  t_tree_c.dds  t_tree_n.dds
EntityCreator/: CMakeLists.txt  EntityCreator.cpp
LevelModifyScripts/: removeallspread.py  updateterrainmods.py
Libraries/: CMakeLists.txt
Source/: Notes.txt  PC_Main.cpp  PC_Platform.cpp  PC_Platform.h
Source/AI/: AI.h  SpinRatController.cpp  SpinRatController.h  WalkerController.cpp  WalkerController.h
Source/Animation/: AnimationController.cpp  AnimationController.h
Source/Camera/: Camera.cpp  Camera.h
Source/Collision/: Collider.h  Collision.cpp  Collision.h  CollisionManager.h  Hitbox.h  HitboxS.h  Hurtbox.h  Pushbox.h  Ray.cpp  Ray.h
Source/Components/: AIComponent.h  Component.h  Components.h  ExpandComponents.h  GroundTraceComponent.h  HitboxComponent.h  HurtboxComponent.h  IntervalSpawnComponent.h  MeterComponent.h  MovementComponent.h  ProjectileComponent.h  PushboxComponent.h  SkeletonComponent.h  SpreadActivatorComponent.h  SpreadDetectComponent.h  StaticModelComponent.h  TransformComponent.h  VelocityComponent.h
Source/Constants/: EntityConstants.h  GameConstants.h  SpreadConstants.h  TimeConstants.h  WorldConstants.h
Source/Controller/: PlayerController.cpp  PlayerController.h
Source/Debug/: DebugName.h
Source/Editor/: BlobEditMode.cpp  BlobEditMode.h  CameraMode.cpp  CameraMode.h  CloneMode.cpp  CloneMode.h  ConfirmBehavior.h  CursorMode.cpp  CursorMode.h  DefaultMode.cpp  DefaultMode.h  Editor.cpp  Editor.h  EditorLevel.cpp  EditorLevel.h  EditorMode.cpp  EditorMode.h  EditorNotification.cpp  EditorNotification.h  EditorTarget.cpp  EditorTarget.h  EditorTargetController.h  EditorTextInput.cpp  EditorTextInput.h  EditorVisibility.h  ExpandModes.h  FindMode.cpp  FindMode.h  GenericScalarMode.cpp  (+44 more)
directx-learning/: Animation.cpp  Animation.h  App.cpp  App.h  DirectXLayer.cpp  DirectXLayer.h  Game.cpp  Game.h  Gamepad.cpp  GraphicsTypes.h  Logger.h  RawMesh.h  RawModel.h  RenderTypes.h  Renderer.cpp  Renderer.h  Rendering.cpp  Rendering.h  Skeleton.cpp  Skeleton.h  Transform.cpp  Transform.h  Win_App.cpp  Win_Game.cpp  Win_Logger.cpp  Win_Main.cpp  Win_RawMesh.cpp  Win_RawModel.cpp  Win_Renderer.cpp  WindowApp.cpp  WindowApp.h  WindowsLayer.cpp  WindowsLayer.h  XInputHandler.cpp  XInputHandler.h  main.cpp
project-jay/: Material.h  Notes.txt
(+812 files in other folders)
