cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/../Tools)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/../Tools)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../Tools)
set(CMAKE_BUILD_TYPE Debug)
project(LibraryTools)

set(BGFX_AMALGAMATED            ON  CACHE INTERNAL "" FORCE)
set(BGFX_BUILD_EXAMPLES         OFF CACHE INTERNAL "" FORCE)
set(BGFX_CONFIG_DEBUG           OFF CACHE INTERNAL "" FORCE)
set(BGFX_CUSTOM_TARGETS         OFF CACHE INTERNAL "" FORCE)
set(BGFX_INSTALL                OFF CACHE INTERNAL "" FORCE)
set(BGFX_INSTALL_EXAMPLES       OFF CACHE INTERNAL "" FORCE)
set(BGFX_USE_DEBUG_SUFFIX       OFF CACHE INTERNAL "" FORCE)
set(BGFX_USE_OVR                OFF CACHE INTERNAL "" FORCE)
set(BUILD_SHARED_LIBS           OFF CACHE INTERNAL "" FORCE)
set(BX_AMALGAMATED              ON  CACHE INTERNAL "" FORCE)
set(BGFX_BUILD_TOOLS            ON  CACHE INTERNAL "" FORCE)

add_subdirectory(${CMAKE_SOURCE_DIR}/bgfx.cmake)
add_subdirectory(${CMAKE_SOURCE_DIR}/modelcompiler)
